<resources>
    <string name="app_name">testProject</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="op_plus">+</string>
    <string name="op_minus">-</string>
    <string name="op_multiply">*</string>
    <string name="op_divide">/</string>
    <string name="op_equals">=</string>
    <string name="op_clear">C</string>
    <string name="error">Error</string>
    <string name="constraint_layout_text">Constraint Layout</string>
    <string name="long_text">This is a long text to demonstrate scrolling. \n\nLine 1\nLine 2\nLine 3\nLine 4\nLine 5\nLine 6\nLine 7\nLine 8\nLine 9\nLine 10\nLine 11\nLine 12\nLine 13\nLine 14\nLine 15\nLine 16\nLine 17\nLine 18\nLine 19\nLine 20\nLine 21\nLine 22\nLine 23\nLine 24\nLine 25\nLine 26\nLine 27\nLine 28\nLine 29\nLine 30</string>
    <string name="relative_layout_text">Relative Layout</string>
    <string name="relative_layout_example">Relative Layout Example</string>
    <string name="relative_desc">This view is below the title.</string>
    <string name="back_to_main">Back to Main</string>
    <string name="minecraft_world">Minecraft World</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="test_your_skill">Test Your Skill</string>
    <string name="sample_image_desc">Sample Image</string>
    <string name="zero">0</string>
    <string name="splash_testing">Splash Testing</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="main_dashboard">Main Dashboard</string>
    <string name="calculator">Calculator</string>
    <string name="second_activity">Second Activity</string>
    <string name="checkbox">Checkbox</string>
    <string name="listview">ListView</string>
    <string name="login_page_btn">Login Page</string>
    <string name="select_color">Select Color</string>
    <string name="hello_page">Hello Page</string>
    <string name="google">Google</string>
    <string name="caller">Caller</string>
    <string name="location">Location</string>
    <string name="file_manager">File Manager</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="fragments_dashboard">Fragments</string>
    <string name="fragment_one_btn">Fragment One</string>
    <string name="fragment_two_btn">Fragment Two</string>
    <string name="test_fragment_one">test fragment one</string>
    <string name="testing_fragment_two">testing fragment two</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_subjects">Choose your subjects:</string>
    <string name="selection_result_prefix">You have selected: %1$s</string>
    <string name="none">None</string>
    <string name="welcome_text">Welcome</string>
    <string name="login_button">Login</string>
    <string name="add_note">Add Note</string>
</resources>