<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:text="@string/main_dashboard"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/button_color_1" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false">

                <Button
                    android:id="@+id/btn_open_calculator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_1"
                    android:text="@string/calculator" />

                <Button
                    android:id="@+id/btn_open_second_activity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_2"
                    android:text="@string/second_activity" />

                <Button
                    android:id="@+id/btn_open_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_2"
                    android:text="@string/checkbox" />

                <Button
                    android:id="@+id/btn_open_listview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_1"
                    android:text="@string/listview" />

                <Button
                    android:id="@+id/btn_open_login_page"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_1"
                    android:text="@string/login_page_btn" />

                <Button
                    android:id="@+id/btn_open_select_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_2"
                    android:text="@string/select_color" />

                <Button
                    android:id="@+id/btn_open_hello_page"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_2"
                    android:text="@string/hello_page" />

                <Button
                    android:id="@+id/btn_open_google"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_1"
                    android:text="@string/google" />

                <Button
                    android:id="@+id/btn_open_caller"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_1"
                    android:text="@string/caller" />

                <Button
                    android:id="@+id/btn_open_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_2"
                    android:text="@string/location" />

                <Button
                    android:id="@+id/btn_open_file_manager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_2"
                    android:text="@string/file_manager" />

                <Button
                    android:id="@+id/btn_open_grid_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_1"
                    android:text="@string/grid_layout" />

                <Button
                    android:id="@+id/btn_open_frame_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_1"
                    android:text="@string/frame_layout" />

                <Button
                    android:id="@+id/btn_open_constraint_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_2"
                    android:text="@string/constraint_layout" />

                <Button
                    android:id="@+id/btn_open_relative_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_2"
                    android:text="@string/relative_layout_text" />

                <Button
                    android:id="@+id/btn_open_test_your_skill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_1"
                    android:text="@string/test_your_skill" />

                <Button
                    android:id="@+id/btn_open_splash"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_1"
                    android:text="@string/splash_screen" />

                <Button
                    android:id="@+id/btn_open_fragments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_2"
                    android:text="@string/fragments_dashboard" />

                <Button
                    android:id="@+id/btn_open_subject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/button_color_2"
                    android:text="Subject Checkbox" />


            </GridLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
